--- a/GlobalEvents/Servicios/Servicios.csproj
+++ b/GlobalEvents/Servicios/Servicios.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="EventsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
