--- a/GlobalEvents/GlobalEvents/packages.config
+++ b/GlobalEvents/GlobalEvents/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="4.0.0-alpha6" targetFramework="net452" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
   <package id="CloudinaryDotNet" version="1.0.30" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
@@ -31,6 +34,7 @@
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="Moment.js" version="2.18.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
