Agregado code first y y primera migracion

--- a/GlobalEvents/Servicios/Servicios.csproj
+++ b/GlobalEvents/Servicios/Servicios.csproj
@@ -99,6 +99,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentsService.cs" />
     <Compile Include="EventsService.cs" />
     <Compile Include="General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
