--- a/GlobalEvents/ViewModels/ViewModels.csproj
+++ b/GlobalEvents/ViewModels/ViewModels.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentsModel.cs" />
     <Compile Include="EventViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
