--- a/GlobalEvents/RepositorioClases/RepositorioClases.csproj
+++ b/GlobalEvents/RepositorioClases/RepositorioClases.csproj
@@ -56,6 +56,14 @@
     <Compile Include="Migrations\201705021736222_Inicial.Designer.cs">
       <DependentUpon>201705021736222_Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705041145136_ModifComments.cs" />
+    <Compile Include="Migrations\201705041145136_ModifComments.Designer.cs">
+      <DependentUpon>201705041145136_ModifComments.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705041314349_ModifTipoDatoComPadre.cs" />
+    <Compile Include="Migrations\201705041314349_ModifTipoDatoComPadre.Designer.cs">
+      <DependentUpon>201705041314349_ModifTipoDatoComPadre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +76,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705021736222_Inicial.resx">
       <DependentUpon>201705021736222_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705041145136_ModifComments.resx">
+      <DependentUpon>201705041145136_ModifComments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705041314349_ModifTipoDatoComPadre.resx">
+      <DependentUpon>201705041314349_ModifTipoDatoComPadre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
