--- a/GlobalEvents/RepositorioClases/RepositorioClases.csproj
+++ b/GlobalEvents/RepositorioClases/RepositorioClases.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201705041314349_ModifTipoDatoComPadre.Designer.cs">
       <DependentUpon>201705041314349_ModifTipoDatoComPadre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705051342500_AddVotosUserEvents.cs" />
+    <Compile Include="Migrations\201705051342500_AddVotosUserEvents.Designer.cs">
+      <DependentUpon>201705051342500_AddVotosUserEvents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -82,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705041314349_ModifTipoDatoComPadre.resx">
       <DependentUpon>201705041314349_ModifTipoDatoComPadre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705051342500_AddVotosUserEvents.resx">
+      <DependentUpon>201705051342500_AddVotosUserEvents.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
