--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="Controllers\CommentsController.cs" />
     <Compile Include="Controllers\ControllersHelper\EventsHelpers.cs" />
     <Compile Include="Controllers\ControllersHelper\HtmlHelper.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -286,6 +287,7 @@
     <Content Include="Views\Events\Clases.cshtml" />
     <Content Include="Views\Events\Deportes.cshtml" />
     <Content Include="Views\Events\CommentsView.cshtml" />
+    <Content Include="Views\Comments\ComentariosReportados.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
