Consultar detalles de comentarios reportados

--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -289,6 +289,7 @@
     <Content Include="Views\Events\CommentsView.cshtml" />
     <Content Include="Views\Comments\ComentariosReportados.cshtml" />
     <Content Include="Views\Comments\ReportarComentario.cshtml" />
+    <Content Include="Views\Comments\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
