--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -290,6 +290,7 @@
     <Content Include="Views\Comments\ComentariosReportados.cshtml" />
     <Content Include="Views\Comments\ReportarComentario.cshtml" />
     <Content Include="Views\Comments\Details.cshtml" />
+    <Content Include="Views\Events\EventosReportados.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
