--- a/GlobalEvents/RepositorioClases/RepositorioClases.csproj
+++ b/GlobalEvents/RepositorioClases/RepositorioClases.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes.cs" />
     <Compile Include="Users.cs" />
   </ItemGroup>
   <ItemGroup>
