--- a/GlobalEvents/Servicios/Servicios.csproj
+++ b/GlobalEvents/Servicios/Servicios.csproj
@@ -103,6 +103,7 @@
     <Compile Include="EventsService.cs" />
     <Compile Include="General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportServices.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
