--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -295,6 +295,7 @@
     <Content Include="Views\Manage\Reportes.cshtml" />
     <Content Include="Views\Manage\EventReported.cshtml" />
     <Content Include="Views\Manage\CommentReported.cshtml" />
+    <Content Include="Views\Events\Otros.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
