--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -296,6 +296,7 @@
     <Content Include="Views\Manage\EventReported.cshtml" />
     <Content Include="Views\Manage\CommentReported.cshtml" />
     <Content Include="Views\Events\Otros.cshtml" />
+    <Content Include="Views\Shared\PermisosNecesarios.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
