--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Controllers\ControllersHelper\HtmlHelper.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ControllersHelper\UserHelpers.cs" />
+    <Compile Include="Controllers\Errores.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -306,10 +307,6 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Datos\Datos.csproj">
-      <Project>{ab1f4019-103e-4f90-acdb-6b59a1c5be42}</Project>
-      <Name>Datos</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RepositorioClases\RepositorioClases.csproj">
       <Project>{CF5B8CF4-526A-41F5-B964-82CE44E4C62D}</Project>
       <Name>RepositorioClases</Name>
