--- a/GlobalEvents/ViewModels/ViewModels.csproj
+++ b/GlobalEvents/ViewModels/ViewModels.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="CommentsModel.cs" />
     <Compile Include="EventViewModel.cs" />
+    <Compile Include="FullSearchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
