--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -301,6 +301,7 @@
     <Content Include="Views\Shared\PermisosNecesarios.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
     <Content Include="Web.sitemap" />
+    <Content Include="Views\Comments\ResponderComentarios.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
