--- a/GlobalEvents/RepositorioClases/RepositorioClases.csproj
+++ b/GlobalEvents/RepositorioClases/RepositorioClases.csproj
@@ -60,6 +60,14 @@
     <Compile Include="Migrations\201705241819260_CambiosenEventosMaxi.Designer.cs">
       <DependentUpon>201705241819260_CambiosenEventosMaxi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705301130115_UsersReportes.cs" />
+    <Compile Include="Migrations\201705301130115_UsersReportes.Designer.cs">
+      <DependentUpon>201705301130115_UsersReportes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705301413363_UserDestacado.cs" />
+    <Compile Include="Migrations\201705301413363_UserDestacado.Designer.cs">
+      <DependentUpon>201705301413363_UserDestacado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,6 +84,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705241819260_CambiosenEventosMaxi.resx">
       <DependentUpon>201705241819260_CambiosenEventosMaxi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705301130115_UsersReportes.resx">
+      <DependentUpon>201705301130115_UsersReportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705301413363_UserDestacado.resx">
+      <DependentUpon>201705301413363_UserDestacado.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
