--- a/GlobalEvents/GlobalEvents/GlobalEvents.csproj
+++ b/GlobalEvents/GlobalEvents/GlobalEvents.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\Users\ReportarUsuario.cshtml" />
     <Content Include="Views\Users\UsuariosReportados.cshtml" />
     <Content Include="Views\Manage\UserReported.cshtml" />
+    <Content Include="Views\Events\AsistenciaEvento.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
